--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Set Docker auth
         run: |
           gcloud auth configure-docker --quiet
-          gcloud auth configure-docker asia-south1-docker.pkg.dev
+          gcloud auth configure-docker europe-docker.pkg.dev
       - name: Build docker image
         run: |
           docker build -t europe-docker.pkg.dev/divine-bonbon-446705-p9/boolmx-docker/bloom-website:$(git rev-parse --short "$GITHUB_SHA") . --network=host
