--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "date-fns": "^4.1.0",
-    "next": "14.2.15",
-    "react": "^18",
+    "next": "^15.1.6",
+    "react": "^19.0.0",
     "react-big-calendar": "^1.17.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
     "react-scroll": "^1.9.0"
   },
