--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,3 +52,25 @@ jobs:
             git add values.yaml
             git commit -m "updating image tag version"
             git push
+  deploy_prod:
+      name: Deploy to prod
+      runs-on: [self-hosted, python3]
+      needs: build-runners
+      if: github.ref == 'refs/heads/main'
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+          with:
+            repository: bloomxlab/helm-chart
+            ref: main
+            token: ${{ secrets.PUSH_TOKEN }}
+  
+        - name: Update version and commit
+          run: |
+            cd ./bloom-website
+            sed -i "s/tag: \S*/tag: $BUILD_TAG/g" prod-vallues.yaml
+            git config --global user.email "devops@bloomx.com"
+            git config --global user.name "Automation"
+            git add prod-vallues.yaml
+            git commit -m "updating image tag version"
+            git push
