--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,9 +68,9 @@ jobs:
         - name: Update version and commit
           run: |
             cd ./bloom-website
-            sed -i "s/tag: \S*/tag: $BUILD_TAG/g" prod-vallues.yaml
+            sed -i "s/tag: \S*/tag: $BUILD_TAG/g" prod-values.yaml
             git config --global user.email "devops@bloomx.com"
             git config --global user.name "Automation"
-            git add prod-vallues.yaml
+            git add prod-values.yaml
             git commit -m "updating image tag version"
             git push
