--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: 'europe-docker.pkg.dev/divine-bonbon-446705-p9/boolmx-docker/bloom-website:$BUILD_TAG'
+          image-ref: 'europe-docker.pkg.dev/divine-bonbon-446705-p9/boolmx-docker/bloom-website:${{ github.ref_name }}-${{ github.run_number }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
