--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.4.9",
     "lucide-react": "^0.477.0",
     "next": "14.2.25",
+    "nodemailer": "^7.0.0",
     "react": "^18",
     "react-big-calendar": "^1.17.0",
     "react-dom": "^18",
