--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-big-calendar": "^1.17.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
