--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.9",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "next": "14.2.25",
     "nodemailer": "^7.0.0",
