--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build:
@@ -19,7 +17,7 @@ services:
       - .:/app
       - /app/node_modules
       - /app/.next
-    command: yarn dev
+    command: npm run dev
 
   web-staging:
     build:
@@ -30,9 +28,9 @@ services:
         - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
         - NEXT_PUBLIC_API_KEY=${NEXT_PUBLIC_API_KEY}
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
       - NEXT_PUBLIC_API_KEY=${NEXT_PUBLIC_API_KEY}
-    command: node server.js 
+    command: npm start 
