--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "blog:convert": "node scripts/word-to-blog-converter.js",
+    "blog:markdown": "node scripts/markdown-blog-generator.js",
+    "blog:word": "node scripts/word-converter.js",
+    "blog:editor": "echo 'Visit /admin/blog-editor to use the web interface'"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.19",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
+    "mammoth": "^1.11.0",
     "next": "14.2.25",
     "nodemailer": "^7.0.0",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-big-calendar": "^1.17.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-scroll": "^1.9.0",
     "sharp": "^0.33.2"
   },
