--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-scroll": "^1.9.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
