--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.7",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.25",
